Attempt to fix converts and missing MySQL driver