@@ -6,28 +6,23 @@ import com.comphenix.protocol.events.ListenerPriority;
 import com.comphenix.protocol.events.PacketAdapter;
 import com.comphenix.protocol.events.PacketContainer;
 import com.comphenix.protocol.events.PacketEvent;
-import com.comphenix.protocol.utility.MinecraftReflection;
 import com.comphenix.protocol.utility.MinecraftVersion;
 import com.comphenix.protocol.wrappers.MinecraftKey;
 import io.netty.buffer.ByteBuf;
 import com.zulfen.zulfbungee.spigot.interfaces.transport.ClientChannelCommHandler;
-import io.netty.buffer.Unpooled;
-import org.bukkit.entity.Player;
 
 import java.util.List;
 
 public class ChannelPayload extends PacketAdapter {
 
     private final ClientChannelCommHandler channelCommHandler;
-    private final ProtocolManager protocolManager;
     private final MinecraftVersion minecraftVersion;
 
     public ChannelPayload(ClientChannelCommHandler channelCommHandlerIn, ProtocolManager protocolManagerIn) {
         super(channelCommHandlerIn.getPluginInstance(), ListenerPriority.NORMAL, PacketType.Play.Client.CUSTOM_PAYLOAD);
         this.channelCommHandler = channelCommHandlerIn;
-        this.protocolManager = protocolManagerIn;
-        this.minecraftVersion = protocolManager.getMinecraftVersion();
-        protocolManager.addPacketListener(this);
+        this.minecraftVersion = protocolManagerIn.getMinecraftVersion();
+        protocolManagerIn.addPacketListener(this);
     }
 
     @Override
@@ -41,7 +36,7 @@ public class ChannelPayload extends PacketAdapter {
             // Channel identifiers changed in 1.13 (arrrrgghh)
             if (minecraftVersion.isAtLeast(MinecraftVersion.AQUATIC_UPDATE)) {
                 List<MinecraftKey> minecraftKeys = packet.getMinecraftKeys().getValues();
-                channel = minecraftKeys.get(0).getFullKey();
+                channel = minecraftKeys.getFirst().getFullKey();
             } else {
                 channel = packet.getStrings().read(0);
             }
@@ -58,23 +53,5 @@ public class ChannelPayload extends PacketAdapter {
 
     @Override
     public void onPacketSending(PacketEvent event) {}
-
-    private void manualSend(byte[] bytesIn, Player playerIn) {
-
-        PacketContainer channelPacket = new PacketContainer(PacketType.Play.Server.CUSTOM_PAYLOAD);
-        ByteBuf byteBuf = Unpooled.copiedBuffer(bytesIn);
-        if (minecraftVersion.isAtLeast(MinecraftVersion.AQUATIC_UPDATE)) {
-            channelPacket.getMinecraftKeys().write(0, new MinecraftKey("zproxy", "channel"));
-        } else {
-            channelPacket.getStrings().write(0, "zproxy:channel");
-        }
-
-        Object packetDataSerializer = MinecraftReflection.getPacketDataSerializer(byteBuf);
-        channelPacket.getModifier().withType(ByteBuf.class).write(0, packetDataSerializer);
-
-        channelCommHandler.getPluginInstance().error(playerIn.getDisplayName());
-        protocolManager.sendServerPacket(playerIn, channelPacket);
-
-    }
 
 }
